# LogiFlow

./: .gitignore  .pre-commit-config.yaml  README.md  ingestion_state.db-shm  ingestion_state.db-wal  pyproject.toml
src/: processing.py
src/ingestion/: data_generator.py
tests/: test_logic.py
